--- a/static/css/new-age.css
+++ b/static/css/new-age.css
@@ -456,7 +456,6 @@ form {
 }
 
 label {
-  position: relative;
   color: #6A7C94;
   font-weight: 400;
   height: 48px;
@@ -467,6 +466,7 @@ label {
 
 label > span {
   float: left;
+  display: block;
 }
 
 .field {
@@ -480,7 +480,7 @@ label > span {
   line-height: 48px;
   padding: 0 20px;
   cursor: text;
-  width: 76%;
+  width: 100%;
   float: right;
 }
 
@@ -488,10 +488,10 @@ label > span {
 .field::-moz-placeholder { color: #CFD7DF; }
 .field:-ms-input-placeholder { color: #CFD7DF; }
 
-.field:focus,
+/*.field:focus,
 .field.StripeElement--focus {
   border-color: #F99A52;
-}
+}*/
 
 /*.button-form {
   float: left;
@@ -554,6 +554,6 @@ button:active {
 }
 
 .buybutton:hover {
-  -webkit-filter: blur(3px); filter: blur(3px);
+  opacity:.5;
 }
 
