--- a/templates/error.html
+++ b/templates/error.html
@@ -43,8 +43,8 @@
                     <div class="header-content">
                         <div class="header-content-inner">
                         	<div class="col-sm-5 col-sm-offset-1">
-					<div class="alert alert-success" role="alert">
-                                                Thanks for purchasing a Munchies box!
+					<div class="alert alert-warning" role="alert">
+                                                {{ error }}
                                                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                                                         <span aria-hidden="true">&times;</span>
                                                 </button>
@@ -178,9 +178,8 @@
                     </div>
                 </div>
                 <div class="col-sm-5">
-                <img src="{{ url_for('static',filename='img/box2.png') }}" class="img-responsive" alt="" style="padding-top:30%; padding-bottom:10%">
-		
-		</div>
+			<img src="{{ url_for('static',filename='img/box2.png') }}" class="img-responsive" alt="" style="padding-top:30%; padding-bottom:10%">
+                </div>
             </div>
         </div>
     </header>
@@ -441,4 +440,5 @@ document.querySelector('#payment-form2').addEventListener('submit', function(e) 
 
   
 {% endblock %}
+
 
