--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,8 +3,10 @@
   <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+<meta property="og:url"                content="http://munchies.eevm.org" />
+<meta property="og:title"              content="Munchies - Tackle finals in bites." />
+<meta property="og:description"        content="15+ snacks delivered to your dormroom." />
+<meta property="og:image"              content="http://munchies.eevm.org/{{ url_for('static',filename='img/box2.png') }}" />
 
     <title>Munchies - Satisfy your cravings!</title>
 
@@ -38,7 +40,16 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-85069056-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
 </head>
 <body id="page-top">
