--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
                             <h1>Fuck Finals. Get Munchies.</h1>
                             <h3>Box of snacks packaged & delivered to your door on 4/8.</h3>
                             <a href="#payment-form" rel="modal:open" id="payment-button1">
-                                <button type="button" class="btn btn-default btn-lg btn-block">Get 1 Munchies Comfort Box - $15</button>
+                                <button type="button" class="btn btn-default btn-lg btn-block">Get 1 Munchies Comfort Box - $10</button>
                                 <!-- <img src="{{ url_for('static',filename='img/price-onebox.png') }}" style="max-width:80%" class="buybutton" href="#payment-form" alt=""> -->
                             </a><br>
                             <!-- <a href="#payment-form2" rel="modal:open" id="payment-button2">
@@ -273,9 +273,19 @@
         <div class="cta-content">
             <div class="container">
                 <h2 style="font-size:60px">Stop waiting.<br>Start munching.</h2>
-                <h3 style="color:white">Packaged & delivered to your door.<br>Pick your dates: 4/8 & 4/22.</h3>
+                <a href="#payment-form" rel="modal:open" id="payment-button1">
+                    <button type="button" class="btn btn-default btn-lg btn-block">Get 1 Munchies Comfort Box - $10</button>
+                    <!-- <img src="{{ url_for('static',filename='img/price-onebox.png') }}" style="max-width:80%" class="buybutton" href="#payment-form" alt=""> -->
+                </a><br>
+                <!-- <a href="#payment-form2" rel="modal:open" id="payment-button2">
+                    <button type="button" class="btn btn-default btn-lg btn-block">Get 2 Munchies Comfort Boxes - $20</button>
+                </a><br> -->
+                <a href="#payment-form2" rel="modal:open" id="payment-button2">
+                    <button type="button" class="btn btn-default btn-lg btn-block">Get 1 Munchies Healthy Box - $15</button>
+                </a>
+                <!-- <h3 style="color:white">Packaged & delivered to your door.<br>Pick your dates: 4/8 & 4/22.</h3>
                 <a href="#payment-form" rel="modal:open"><img src="{{ url_for('static',filename='img/price-onebox.png') }}" style="max-width:40%" class="buybutton" href="#payment-form" alt=""></a><br><br>
-                <a href="#payment-form2" rel="modal:open"><img src="{{ url_for('static',filename='img/price-twobox.png') }}" class="buybutton" style="max-width:40%" alt=""></a>
+                <a href="#payment-form2" rel="modal:open"><img src="{{ url_for('static',filename='img/price-twobox.png') }}" class="buybutton" style="max-width:40%" alt=""></a> -->
             </div>
         </div>
         <div class="overlay"></div>
