--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
                             Powered by <img src="{{ url_for('static',filename='img/eevm.png') }}" style="max-width:25%" alt="">
                             <img src="{{ url_for('static',filename='img/munchies_logo2.png') }}" style="max-width:80%" alt="">
                             <h1>Fuck Finals. Get Munchies.</h1>
-                            <h3>Box of snacks packaged & delivered to your door on 4/8.</h3>
+                            <h3>Box of snacks packaged & delivered to your door on 4/22.</h3>
                             <a href="#payment-form" rel="modal:open" id="payment-button1">
                                 <button type="button" class="btn btn-default btn-lg btn-block">Get 1 Munchies Comfort Box - $10</button>
                                 <!-- <img src="{{ url_for('static',filename='img/price-onebox.png') }}" style="max-width:80%" class="buybutton" href="#payment-form" alt=""> -->
@@ -274,14 +274,14 @@
             <div class="container">
                 <h2 style="font-size:60px">Stop waiting.<br>Start munching.</h2>
                 <a href="#payment-form" rel="modal:open" id="payment-button1">
-                    <button type="button" class="btn btn-default btn-lg btn-block">Get 1 Munchies Comfort Box - $10</button>
+                    <button type="button" class="btn btn-default btn-lg">Get 1 Munchies Comfort Box - $10</button>
                     <!-- <img src="{{ url_for('static',filename='img/price-onebox.png') }}" style="max-width:80%" class="buybutton" href="#payment-form" alt=""> -->
                 </a><br>
                 <!-- <a href="#payment-form2" rel="modal:open" id="payment-button2">
                     <button type="button" class="btn btn-default btn-lg btn-block">Get 2 Munchies Comfort Boxes - $20</button>
                 </a><br> -->
                 <a href="#payment-form2" rel="modal:open" id="payment-button2">
-                    <button type="button" class="btn btn-default btn-lg btn-block">Get 1 Munchies Healthy Box - $15</button>
+                    <button type="button" class="btn btn-default btn-lg">Get 1 Munchies Healthy Box - $15</button>
                 </a>
                 <!-- <h3 style="color:white">Packaged & delivered to your door.<br>Pick your dates: 4/8 & 4/22.</h3>
                 <a href="#payment-form" rel="modal:open"><img src="{{ url_for('static',filename='img/price-onebox.png') }}" style="max-width:40%" class="buybutton" href="#payment-form" alt=""></a><br><br>
