--- a/templates/index.html
+++ b/templates/index.html
@@ -349,7 +349,7 @@
 
      <script type="text/javascript">
 // import Stripe from 'stripe';
-var stripe = Stripe('pk_live_l36eXajZNkhE5mMWKuvRqcn0');
+var stripe = Stripe('API_KEY');
 var elements = stripe.elements();
 
 var card = elements.create('card', {
